@@ -1,8 +1,10 @@
 package com.watchtogether.roomservice.controller;
 
-import com.watchtogether.roomservice.entity.RoomEntity;
+import com.google.protobuf.Empty;
+import com.google.protobuf.Timestamp;
+import com.watchtogether.roomservice.entity.ActiveRoomEntity;
+import com.watchtogether.roomservice.service.invitation.InvitationService;
 import com.watchtogether.roomservice.service.room.IRoomService;
-import com.watchtogether.roomservice.util.RoomGrpcMapper;
 import com.watchtogether.grpc.*;
 import io.grpc.stub.StreamObserver;
 import lombok.RequiredArgsConstructor;
@@ -11,8 +13,6 @@ import net.devh.boot.grpc.server.service.GrpcService;
 //import org.springframework.security.core.context.SecurityContextHolder; // Пример получения пользователя
 
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -20,75 +20,167 @@ import java.util.stream.Collectors;
 public class RoomGrpcController extends com.watchtogether.grpc.RoomServiceGrpc.RoomServiceImplBase {
 
     private final IRoomService roomService;
+    private final InvitationService invitationService;
 
     @Override
-    public void getRoomById(
-            RoomIdRequestGrpc request,
-            StreamObserver<RoomResponseGrpc> responseObserver
+    public void getRoomById(GetRoomByIdRequest request,
+                            StreamObserver<RoomResponse> responseObserver
     ) {
-        log.info("gRPC getRoomById, id: {}", request.getRoomId());
-        var room = roomService.getRoomById(UUID.fromString(request.getRoomId()));
-        responseObserver.onNext(RoomGrpcMapper.toRoomResponseGrpc(room));
+        var roomEntity = roomService.findRoomById(request.getRoomId());
+        responseObserver.onNext(RoomResponse.newBuilder()
+                        .setRoomId(roomEntity.getId())
+                        .setRoomCreator(RoomParticipant.newBuilder()
+                                .setUserId(roomEntity.getOwnerId())
+                                .setDisplayName(roomEntity.getParticipant(roomEntity.getOwnerId()).getDisplayName()) //TODO: improve
+                                .build())
+                        .setRoomName(roomEntity.getName())
+                        .setRoomDescription(roomEntity.getDescription())
+                        .setRoomType(roomEntity.getType())
+                        .setRoomCategory(roomEntity.getCategory())
+                        .setMaxParticipants(roomEntity.getMaxParticipants())
+                        .setNeedPassword(!roomEntity.getPasswordHash().isEmpty())
+                        .setParticipantNumber(roomEntity.getParticipants().size())
+                        .setCreatedAt(Timestamp.newBuilder()
+                                .setSeconds(roomEntity.getCreatedAt().getEpochSecond())
+                                .setNanos(roomEntity.getCreatedAt().getNano())
+                                .build())
+                        .build());
         responseObserver.onCompleted();
     }
 
     @Override
-    public void getAllRooms(
-            com.watchtogether.grpc.EmptyGrpc request,
-            StreamObserver<RoomListResponseGrpc> responseObserver
+    public void getRoomByOwnerId(GetRoomByOwnerIdRequest request,
+                                 StreamObserver<RoomResponse> responseObserver
     ) {
-        log.info("gRPC getAllRooms");
-        var rooms = roomService.getAllRooms();
-        var roomProtos = rooms.stream()
-                .map(RoomGrpcMapper::toRoomGrpc)
-                .collect(Collectors.toList());
-        responseObserver.onNext(RoomListResponseGrpc.newBuilder().addAllRooms(roomProtos).build());
-        responseObserver.onCompleted();
+        super.getRoomByOwnerId(request, responseObserver);
     }
 
     @Override
-    public void getRoomsByCategory(
-            CategoryRequestGrpc request,
-            StreamObserver<RoomListResponseGrpc> responseObserver
+    public void getAllPublicRooms(Empty request,
+                                  StreamObserver<RoomListResponse> responseObserver
     ) {
-        log.info("gRPC getRoomsByCategory: {}", request.getCategory());
-        List<RoomEntity> rooms = roomService.getAllRoomsByCategory(request.getCategory());
-        var roomProtos = rooms.stream()
-                .map(RoomGrpcMapper::toRoomGrpc)
-                .collect(Collectors.toList());
-        responseObserver.onNext(RoomListResponseGrpc.newBuilder().addAllRooms(roomProtos).build());
+        List<ActiveRoomEntity> publicRooms = roomService.findAllPublicRooms();
+        responseObserver.onNext(RoomListResponse.newBuilder()
+                        .addAllRooms(publicRooms
+                                .stream()
+                                .map(this::mapToGrpcRoomResponse)
+                                .toList())
+                        .build());
         responseObserver.onCompleted();
     }
 
     @Override
-    public void createRoom(
-            CreateRoomRequestGrpc request,
-            StreamObserver<RoomResponseGrpc> responseObserver
+    public void getRoomsByCategory(GetRoomsByCategoryRequest request,
+                                   StreamObserver<RoomListResponse> responseObserver
     ) {
-        log.info("gRPC createRoom: {}", request.getName());
-        // ID пользователя берется из безопасного контекста, а не из запроса!
-        String userId = UUID.randomUUID().toString(); //TODO:CHANGE Заглушка, здесь должна быть логика
-
-        var roomEntity = roomService
-                .createRoom(RoomGrpcMapper
-                        .fromCreateRequestGrpc(request), UUID.fromString(userId));
-
-        responseObserver.onNext(RoomGrpcMapper.toRoomResponseGrpc(roomEntity));
+        List<ActiveRoomEntity> roomList = roomService.findAllRoomsByCategory(request.getRoomCategory());
+        responseObserver.onNext(RoomListResponse.newBuilder()
+                .addAllRooms(roomList
+                        .stream()
+                        .map(this::mapToGrpcRoomResponse)
+                        .toList())
+                .build());
         responseObserver.onCompleted();
     }
 
     @Override
-    public void updateRoom(UpdateRoomRequestGrpc request, StreamObserver<RoomResponseGrpc> responseObserver) {
-        log.info("gRPC updateRoom: {}", request.getRoomId());
-        String userId = "извлечь_из_grpc_metadata";
-
-        // Здесь ваш сервис должен принимать DTO для обновления
-        var updatedEntity = roomService.updateRoom(
-                RoomGrpcMapper.fromUpdateRequest(request),
-                UUID.fromString(request.getRoomId()),
-                UUID.fromString(userId));//TODO: refactor
-
-        responseObserver.onNext(RoomGrpcMapper.toRoomResponseGrpc(updatedEntity));
+    public void createRoom(CreateRoomRequest request,
+                           StreamObserver<CreateRoomResponse> responseObserver
+    ) {
+        var createdRoom = roomService.createRoom(request); //TODO: ??
+        responseObserver.onNext(CreateRoomResponse.newBuilder()
+                        .setSuccess(true)
+                        .setMessage("Room created successfully")
+                        .build());
         responseObserver.onCompleted();
     }
+
+    @Override
+    public void addParticipantToRoom(AddParticipantRequest request,
+                                     StreamObserver<JoinToRoomResponse> responseObserver
+    ) { //TODO: ну тут как то надо все же проверять
+
+        JoinToRoomResponse.Builder responseBuilder;
+
+        if (request.getPassword().isEmpty()) {
+            responseBuilder = roomService.addParticipantToRoom(request.getRoomId(), request.getParticipant()); //TODO: improve here
+            log.info("two par");
+            log.info("pass: {}", request.getPassword());
+        } else {
+            log.info("three par");
+            responseBuilder = roomService.addParticipantToRoom(request);
+        }
+
+        responseObserver.onNext(
+                responseBuilder
+                        .setMessage(responseBuilder.getSuccess() ? "Participant joined successfully" : "Participant not joined")
+                        .build());
+        responseObserver.onCompleted();
+    }
+
+    @Override
+    public void removeParticipantFromRoom(RemoveParticipantRequest request,
+                                          StreamObserver<RemoveParticipantResponse> responseObserver
+    ) {
+        boolean success = roomService.removeParticipantFromRoom(request.getRoomId(), request.getParticipantId()); //TODO: ловить искл.
+        responseObserver.onNext(RemoveParticipantResponse.newBuilder()
+                .setSuccess(success)
+                .setMessage(success ? "Participant leaved successfully" : "Participant not leaved")
+                .build());
+        responseObserver.onCompleted();
+    }
+
+    @Override
+    public void generateInvitation(GenerateInvitationRequest request, StreamObserver<GenerateInvitationResponse> responseObserver) {
+
+        String code = invitationService.generateInvitation(request);
+
+        responseObserver.onNext(GenerateInvitationResponse.newBuilder()
+                        .setSuccess(true)
+                        .setLink(code) //TODO: переделывать в ссылку
+                        .build());
+        responseObserver.onCompleted();
+    }
+
+    @Override
+    public void joinRoomByInvite(
+            JoinRoomByInviteRequest request,
+            StreamObserver<JoinToRoomResponse> responseObserver
+    ) {
+//        var result = invitationService.joinRoomByInvite(request);
+        JoinToRoomResponse.Builder responseBuilder = invitationService.joinRoomByInvite(request);
+        responseObserver.onNext(
+                responseBuilder
+                        .setMessage(responseBuilder.getSuccess() ? "Participant joined successfully" : "Participant not joined")
+                        .build());
+        responseObserver.onCompleted();
+    }
+
+
+
+    private RoomResponse mapToGrpcRoomResponse(ActiveRoomEntity entity) {
+        return RoomResponse.newBuilder()
+                .setRoomId(entity.getId())
+                .setRoomCreator(RoomParticipant.newBuilder()
+                        .setUserId(entity.getOwnerId())
+                        .setDisplayName(entity.getParticipant(entity.getOwnerId()).getDisplayName()) //TODO: improve
+                        .build())
+                .setRoomName(entity.getName())
+                .setRoomDescription(entity.getDescription() != null ? entity.getDescription() : "")
+                .setRoomType(entity.getType())
+                .setRoomCategory(entity.getCategory())
+                .setMaxParticipants(entity.getMaxParticipants())
+                .setNeedPassword(!entity.getPasswordHash().isEmpty())
+                .setParticipantNumber(entity.getParticipants().size())
+                .setCreatedAt(Timestamp.newBuilder()
+                        .setSeconds(entity.getCreatedAt().getEpochSecond())
+                        .setNanos(entity.getCreatedAt().getNano())
+                        .build())
+                .build();
+    }
+
+
+
+
+
 }
